projet_rust/target/debug/build/eyre-134d118e90b817b5/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/elsegahy/projet-rust-rpg-2021/projet_rust/target/debug/build/eyre-134d118e90b817b5/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
